# bonfire-benchmark

./: .gitignore  README.md  setup.cfg
bonfire-benchmark/: lookup.py
bonfire-benchmark/datasets/: __init__.py
bonfire-benchmark/datasets/crc/: crc_dataset.py  extract_patches.py
bonfire-benchmark/datasets/masati/: masati_dataset.py
bonfire-benchmark/datasets/mnist/: mnist_bags.py
bonfire-benchmark/datasets/sival/: create_binary_masks.py  sival_dataset.py
bonfire-benchmark/datasets/tef/: tef_dataset.py
bonfire-benchmark/models/: __init__.py  count_mnist_models.py  crc_models.py  dgr_models.py  four_mnist_models.py  musk_models.py  sival_models.py  tef_models.py
bonfire_benchmark/: __init__.py
bonfire_benchmark/datasets/: __init__.py
bonfire_benchmark/datasets/crc/: crc_compute_norm.py  crc_dataset.py  create_class_csv.py  create_patch_labels.py
bonfire_benchmark/datasets/dgr/: dgr_dataset.py
bonfire_benchmark/datasets/mnist/: mnist_bags.py
bonfire_benchmark/datasets/musk/: musk_dataset.py
bonfire_benchmark/datasets/sival/: compute_norm.py
bonfire_benchmark/models/: __init__.py  four_mnist_models.py  masati_models.py
config/: four-mnist_config.yaml
scripts/: download_models.py  eval_model.py  train_model.py  tune_model.py
