[metadata]
name = bonfire-benchmark
version = 0.1.0
author= Joseph Early
author_email = joseph.early.ai@gmail.com
url= https://github.com/JAEarly/bonfire-benchmark
description = Multiple instance learning benchmark datasets and models.
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT
classifiers =
    Development Status :: 3 - Alpha
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Topic :: Scientific/Engineering :: Artificial Intelligence
keywords =
    machine-learning
    multiple-instance-learning
    pytorch

[options]
setup_requires =
    setuptools
install_requires =
    bonfire
packages = find:
